--- a/README.Rmd
+++ b/README.Rmd
@@ -69,7 +69,7 @@ I am doing a beta test of messy datasets, largely in Excel, with many annoying n
 You can download and open these from the GitHub repo in all of their messy Excel glory by clicking on the URL links in the table below.
 You can also find them [here in the list on the GitHub repo](https://github.com/higgi13425/medicaldata/tree/master/data-raw/messy_data), where you can click on one of the *.xlsx files, then click on the `View Raw` button to download it. 
 
-You can read these datasets directly into R from the urls in the table below with the example code found in the following code chunk, which reads in the `messy_infarct` dataset and assigns it to the object `infarct`.
+You can read these datasets directly into R from the urls in the table below with the example code found in the following code chunk, which reads in the `messy_infarct` dataset and assigns it to the object `infarct`. It may be easiest to copy the entire code chunk below by hovering over the copy icon in the top right corner, then clicking to copy.
 
 ```{r, eval=FALSE}
 # install.packages('openxlsx')
